# scriptplan

./: .gitignore  .issue.db  ContactList.html  Deliveries.html  Development.html  MANIFEST.in  Overview.html  README.md  ResourceGraph.html  SHOWCASE.md  Status.html  gantt.csv  generate_issues.py  issues.json  nohup.out  pyproject.toml  repro_issue.py  screenshot_tool.py  setup.py
examples/: gantt_demo.tjp  simple.tjp  web_api_example.py
rodmena_resource_management/: __init__.py
rodmena_resource_management/cli/: __init__.py  main.py
rodmena_resource_management/core/: account.py  booking.py  journal.py  leave.py  limits.py  project.py  property.py  resource.py  resource_scenario.py  scenario.py  scenario_data.py  shift.py  task.py  task_scenario.py  timesheet.py  working_hours.py
rodmena_resource_management/parser/: tjp.lark  tjp_parser.py
rodmena_resource_management/report/: __init__.py  html_generator.py  report.py  report_base.py  report_context.py  resource_report.py  table_report.py  task_report.py  text_report.py
rodmena_resource_management/scheduler/: batch_processor.py  scoreboard.py
rodmena_resource_management/utils/: data_cache.py  logger.py  message_handler.py  time.py
scriptplan/: __init__.py  web.py
scriptplan/_cython/: __init__.py  scoreboard_cy.c  scoreboard_cy.pyx  time_utils_cy.c  time_utils_cy.pyx  working_hours_cy.c  working_hours_cy.pyx
scriptplan/cli/: __init__.py  main.py  plan.py
scriptplan/core/: account.py  allocation.py  booking.py  exceptions.py  journal.py  leave.py  limits.py  project.py  property.py  resource.py  resource_scenario.py  scenario.py  scenario_data.py  shift.py  task.py  task_scenario.py  timesheet.py  working_hours.py
scriptplan/parser/: macro_processor.py  tjp.lark  tjp_parser.py
scriptplan/report/: __init__.py  html_generator.py  report.py  report_base.py  report_context.py  resource_report.py  table_report.py  task_report.py  text_report.py
scriptplan/scheduler/: batch_processor.py  scoreboard.py
scriptplan/templates/: index.html
scriptplan/utils/: data_cache.py  logger.py  message_handler.py  time.py
scripts/: generate_exam.sh
tests/: judge_bottleneck.py  judge_complex.py  judge_jit.py  judge_of_time.py  judge_synchrony.py  judge_thermal.py  judge_timezone.py  judge_ultra_math.py  judge_workflow.py  test_account.py  test_attribute_base.py  test_batch_processor.py  test_cli.py  test_core_allocation.py  test_core_booking.py  test_core_project.py  test_core_resource.py  test_core_scenario.py  test_core_task.py  test_html_generator.py  test_html_report_integration.py  test_journal.py  test_logger.py  test_macro_processor.py  test_message_handler.py  test_parser.py  test_property_list.py  test_property_set.py  test_property_tree_node.py  test_report.py  test_scheduling.py  test_scheduling_validation.py  test_scoreboard.py  test_shift.py  test_timesheet.py  test_utils_time.py  test_web.py  test_web_auto_report.py  test_web_static.py
tests/data/: airport_retrofit.tjp  airport_stress_test.tjp  airport_stress_test_tj_reference.csv  airport_ultra_math.tjp  airport_ultra_math_report.tjp  alap_backward.tjp  alap_output.csv  atomic.tjp  blackbox.tjp  bottleneck.tjp  bottleneck_output.csv  eclipse.tjp  failover.tjp  jit_supply.tjp  jit_supply_tj_reference.csv  math_torture.tjp  paradox.tjp  priority_clash.tjp  priority_clash_tj_reference.csv  quota.tjp  simple.tjp  synchrony.tjp  thermal.tjp  throughput.tjp  time_traveler.tjp  timezone_stress.tjp  tutorial.tjp  union_contract.tjp  workflow_engine.tjp
tests/output/: bottleneck_output.csv  jit_output.csv  synchrony_output.csv  timezone_output.csv
tests/output/tj3/: ContactList.html  Deliveries.html  Development.html  Overview.html  ResourceGraph.html  Status.html
