[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "planscript"
version = "0.9.0"
description = "A powerful project management tool for resource allocation and scheduling."
authors = [
  { name="Rodmena Team", email="team@rodmena.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark", # For parsing TJP files
    "python-dateutil",
]

dev-dependencies = [
    "pytest",
    "pytest-xdist",
    "pandas",
    "ruff",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
rodmena = "rodmena_resource_management.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n 8"
filterwarnings = ["ignore::DeprecationWarning"]
